demochat-sample/deploy/kube-ingress-demo.yml
apiVersion: extensions/v1beta1g
kind: Ingress
metadata:
  name: demochat-ingress
spec:
  backend:
    serviceName: demochat-board
    servicePort: 80
